--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <a target="_blank" href="https://www.instagram.com/zsuyah/">INSTAGRAM</a>
             <a target="_blank" href="https://www.youtube.com/channel/UCUueDlfUiwT9aoZqQwRbSFg">VIDEOS</a>
             <a target="_blank" href="https://ngl.link/zsuyah">Send me any anonymous questions!!</a>
-            <a target="_blank" href="https://www.youtube.com/watch?v=RvkFQGyF-l0">, and then swing yourself</a>
+            <a target="_blank" href="https://www.youtube.com/watch?v=RvkFQGyF-l0">, and then swing by yourself</a>
         </div>
     </body>
 </html>
